# Local_AI-Agent_Firewall_Proxy

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md  TEST_REPORT.md  firewall_config.toml
examples/: README.md  agent_payload_sample.json  rogue_agent.sh
src/: config.rs  dns.rs  main.rs  policy.rs  prompt.rs  proxy.rs  sandbox.rs  shim.rs  tls.rs
tests/: policy_tests.rs
