[package]
name = "Local_AI-Agent_Firewall_Proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full"] }
hyper-rustls = "0.27.9"
hyper-util = { version = "0.1.20", features = ["full"] }
rcgen = "0.14.8"
rustls = "0.23.41"
rustls-pemfile = "2.2.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
webpki-roots = "1.0.8"
