[package]
name = "Local_AI-Agent_Firewall_Proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
brotli = "7"
bytes = "1.12.1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
flate2 = "1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full"] }
hyper-rustls = "0.27.9"
hyper-util = { version = "0.1.20", features = ["full"] }
rcgen = "0.14.8"
regex = "1"
rustls = "0.23.41"
rustls-native-certs = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
